data/derived/fa15/progs/unify/prog0616.ml.out
Characters 14-30:
  let _ = pipe [(fun x -> x + 3);(fun x-> x + x)] 3;;
                ^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a) list list list
